# dogwood-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dogwood-key.pem  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/activities/: apps.py  models.py  serializers.py  views.py
apps/activities/docs/: ASSIGNMENT.md
apps/activities/migrations/: 0001_initial.py
apps/activities/tests/: test_activities.py
apps/community/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/community/docs/: ASSIGNMENT.md
apps/community/migrations/: 0001_initial.py
apps/community/tests/: test_community.py
apps/content/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/content/docs/: ASSIGNMENT.md
apps/content/migrations/: 0001_initial.py
apps/content/tests/: test_content.py
apps/info/: apps.py  models.py  serializers.py  views.py
apps/info/docs/: ASSIGNMENT.md
apps/info/migrations/: 0001_initial.py
apps/info/tests/: test_info.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
requirements/: base.txt  dev.txt
server-configs/: gunicorn.service  nginx-dogwood.conf  setup-server.sh
tests/: conftest.py  test_smoke.py
